<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AlbumDetailsFragment"
    android:paddingVertical="12dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/album_name_label"
        android:textColor="@color/text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/album_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_records_placeholder"
        android:textColor="@color/text"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:contentDescription="@string/album_cover"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:id="@+id/album_performers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/album_artist_placeholder"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/album_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/album_year_placeholder"
            android:textColor="@color/text"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/album_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="16sp" />

</LinearLayout>