<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AlbumDetailsFragment"
    android:paddingVertical="12dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/collector_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/coleccionista_placeholder"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_mark_email_read_24"
            android:visibility="visible"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/email_icon_description"/>

        <TextView
            android:id="@+id/collector_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/album_artist_placeholder"
            android:textColor="@color/text"
            android:textSize="18sp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_phone_android_24"
            android:visibility="visible"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/phone_icon_description"/>

        <TextView
            android:id="@+id/collector_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/collector_phone_placeholder"
            android:textColor="@color/text"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>